# staiotcraft_sdatalog_steval-mkboxpro

./: .clangd  .gitignore  .mxproject  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  STAIOTCRAFT_SDATALOG_STEVAL-MKBOXPRO.ioc  STM32U585xx_FLASH.ld  STM32U585xx_RAM.ld
Addons/: PnPL_Messages.txt  STAIOTCRAFT_SDATALOG_STEVAL-MKBOXPRO-1.json  lsm6dsv16x_mlc.json
Addons/PnPL/AppModel/Inc/: App_model.h  App_model_Acquisition_Information.h  App_model_Device_Information.h  App_model_Log_Controller.h  App_model_Lsm6dsv16x_Acc.h  App_model_Lsm6dsv16x_Gyro.h  App_model_Lsm6dsv16x_Mlc.h  PnPLCompManager_conf.h
Addons/PnPL/AppModel/Src/: App_model.c  App_model_Acquisition_Information.c  App_model_Device_Information.c  App_model_Log_Controller.c  App_model_Lsm6dsv16x_Acc.c  App_model_Lsm6dsv16x_Gyro.c  App_model_Lsm6dsv16x_Mlc.c
Addons/PnPL/Components/Inc/: Acquisition_Information_PnPL.h  Device_Information_PnPL.h  Log_Controller_PnPL.h  Lsm6dsv16x_Acc_PnPL.h  Lsm6dsv16x_Gyro_PnPL.h  Lsm6dsv16x_Mlc_PnPL.h  PnPL_init.h
Addons/PnPL/Components/Src/: Acquisition_Information_PnPL.c  Device_Information_PnPL.c  Log_Controller_PnPL.c  Lsm6dsv16x_Acc_PnPL.c  Lsm6dsv16x_Gyro_PnPL.c  Lsm6dsv16x_Mlc_PnPL.c  PnPL_init.c
Core/Inc/: RTE_Components.h  flash_memory.h  i2c.h  main.h  rtc.h  steval_mkboxpro_bus.h  steval_mkboxpro_conf.h  steval_mkboxpro_errno.h  stm32u5xx_hal_conf.h  stm32u5xx_it.h  tim.h  usb.h
Core/Src/: flash_memory.c  gpdma.c  gpio.c  i2c.c  main.c  rtc.c  steval_mkboxpro_bus.c  stm32u5xx_hal_msp.c  stm32u5xx_it.c  tim.c  usart.c  usb.c
Drivers/BSP/Components/ST25DV/: st25dv.c  st25dv.h
Drivers/BSP/Components/lsm6dsv16x/: Release_Notes.html  Release_Notes.md  lsm6dsv16x.c  lsm6dsv16x.h  lsm6dsv16x_reg.c  lsm6dsv16x_reg.h
Drivers/BSP/STEVAL-MKBOXPRO/: steval_mkboxpro_bus.c  steval_mkboxpro_bus.h  steval_mkboxpro_errno.h
Drivers/CMSIS/Device/ST/STM32U5xx/Include/: stm32u585xx.h
Drivers/STM32U5xx_HAL_Driver/: README.md
Drivers/STM32U5xx_HAL_Driver/Inc/: stm32u5xx_hal_dma.h  stm32u5xx_hal_gtzc.h  stm32u5xx_hal_otfdec.h  stm32u5xx_hal_pwr_ex.h  stm32u5xx_hal_rcc.h  stm32u5xx_hal_rcc_ex.h  stm32u5xx_ll_bus.h  stm32u5xx_ll_dma.h  stm32u5xx_ll_pwr.h  stm32u5xx_ll_rcc.h  stm32u5xx_ll_rtc.h  stm32u5xx_ll_system.h
Drivers/STM32U5xx_HAL_Driver/Inc/Legacy/: stm32_hal_legacy.h
Drivers/STM32U5xx_HAL_Driver/Src/: stm32u5xx_hal_rcc_ex.c  stm32u5xx_ll_rcc.c
Middlewares/ST/PnPLCompManager/: Release_Notes.html  Release_Notes.md
Middlewares/ST/PnPLCompManager/Inc/: IPnPLComponent.h  IPnPLComponent_vtbl.h  PnPLCompManager.h  PnPLDef.h
Middlewares/ST/PnPLCompManager/Src/: IPnPLComponent.c  PnPLCompManager.c
Middlewares/ST/STM32_USB_Device_Library/: Release_Notes.md
Middlewares/ST/SimpleSerialTL/: .gitignore  README.md  Release_Notes.html  Release_Notes.md  readme.html
Middlewares/ST/SimpleSerialTL/Inc/: simple_serial_tl.h  simple_serial_tl_conf_template.h
Middlewares/ST/SimpleSerialTL/Src/: simple_serial_tl.c
Middlewares/ST/aspep_slave/: README.md  Release_Notes.html  Release_Notes.md  readme.html
Middlewares/ST/aspep_slave/Inc/: aspep_slave.h  aspep_slave_tl.h  usart_aspep_driver.h
Middlewares/ST/aspep_slave/Src/: aspep_slave.c  aspep_slave_config.c  usart_aspep_driver_F4.c  usart_aspep_driver_H5.c  usart_aspep_driver_H7.c  usart_aspep_driver_HAL.c  usart_aspep_driver_L4.c  usart_aspep_driver_U0.c  usart_aspep_driver_U5.c
USB_Device/App/: usb_device.c  usb_device.h  usbd_cdc_if.c  usbd_cdc_if.h  usbd_desc.c  usbd_desc.h
VDATALOG/: Cmds.txt  ToCompressMLCfile.py
VDATALOG/App/: app_vdatalog.c  app_vdatalog.h  aspep_slave_conf.h  aspep_slave_hw_conf.h  finish_good_hal.c  finish_good_hal.h  fsm.c  fsm.h  lsm6dsv16x_acc.c  lsm6dsv16x_acc.h  lsm6dsv16x_gyro.c  lsm6dsv16x_gyro.h  lsm6dsv16x_mlc.h  lsm6dsv16x_mlc_app.c  lsm6dsv16x_mlc_app.h  ntp_client.c  ntp_client.h  simple_serial_tl_conf.h  timestamp.c  timestamp.h  vdatalog.c  vdatalog.h  vdatalog_conf.h
binary/: STAIOTCRAFT_SDATALOG_STEVAL-MKBOXPRO.elf
cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
cmake/stm32cubemx/: CMakeLists.txt
