cmake_minimum_required(VERSION 3.22)
# Enable CMake support for ASM and C languages
enable_language(C ASM)
# STM32CubeMX generated symbols (macros)
set(MX_Defines_Syms 
	USE_HAL_DRIVER 
	STM32U585xx
#    NO_UART_DMA
#    NO_TIM1    # 1Sec MLC polling timer
#    NO_TIM3    # VDL precise timestamp timer
    NO_VDATALOG_PERIODIC_RTC_TASKS
    NO_FLASH_MEM 
    NO_PRINTF_USB  
    DATA_READY_PULSED
#    DUMMY_DATA_ACC # to be used to generate dummy accelerometer data for testing, to be used in conjunction with DATA_READY_PULSED
#    DUMMY_DATA_GYRO # to be used to generate dummy gyroscope data for testing, to be used in conjunction with DATA_READY_PULSED
    $<$<CONFIG:Debug>:DEBUG>
)

# STM32CubeMX generated include paths
set(MX_Include_Dirs
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Core/Inc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../USB_Device/App
    ${CMAKE_CURRENT_SOURCE_DIR}/../../USB_Device/Target
    ${CMAKE_CURRENT_SOURCE_DIR}/../../VDATALOG/App
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Addons/PnPL/Components/Inc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Addons/PnPL/AppModel/Inc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../X-CUBE-MEMS1/Target
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Drivers/BSP/STEVAL-MKBOXPRO
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Drivers/STM32U5xx_HAL_Driver/Inc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Drivers/STM32U5xx_HAL_Driver/Inc/Legacy
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Drivers/CMSIS/Device/ST/STM32U5xx/Include
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Drivers/CMSIS/Include
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Middlewares/ST/aspep_slave/Inc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Middlewares/ST/SimpleSerialTL/Inc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Middlewares/ST/PnPLCompManager/Inc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Middlewares/ST/STM32_USB_Device_Library/Core/Inc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Middlewares/Third_Party/Parson_DataOoExchange/parson
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Drivers/BSP/Components/lsm6dsv16x
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Drivers/BSP/Components/ST25DV
    ${CMAKE_CURRENT_SOURCE_DIR}/../../X-CUBE-MEMS1/Target    
)

# STM32CubeMX generated application sources
set(MX_Application_Src
    ${CMAKE_CURRENT_SOURCE_DIR}/../../X-CUBE-MEMS1/Target/custom_motion_sensors.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../X-CUBE-MEMS1/Target/custom_motion_sensors_ex.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../X-CUBE-MEMS1/Target/MEMS_integration.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../USB_Device/App/usb_device.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../USB_Device/App/usbd_cdc_if.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../USB_Device/App/usbd_desc.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../USB_Device/Target/usbd_conf.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../VDATALOG/App/vdatalog.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../VDATALOG/App/ntp_client.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../VDATALOG/App/fsm.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../VDATALOG/App/timestamp.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../VDATALOG/App/lsm6dsv16x_acc.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../VDATALOG/App/lsm6dsv16x_gyro.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../VDATALOG/App/lsm6dsv16x_mlc_app.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../VDATALOG/App/finish_good_hal.c
#    ${CMAKE_CURRENT_SOURCE_DIR}/../../VDATALOG/App/sensor_context.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../VDATALOG/App/app_vdatalog.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Addons/PnPL/AppModel/Src/App_model_Device_Information.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Addons/PnPL/AppModel/Src/App_model.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Addons/PnPL/AppModel/Src/App_model_Acquisition_Information.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Addons/PnPL/AppModel/Src/App_model_Log_Controller.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Addons/PnPL/AppModel/Src/App_model_Lsm6dsv16x_Acc.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Addons/PnPL/AppModel/Src/App_model_Lsm6dsv16x_Gyro.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Addons/PnPL/AppModel/Src/App_model_Lsm6dsv16x_Mlc.c        

    ${CMAKE_CURRENT_SOURCE_DIR}/../../Addons/PnPL/Components/Src/Device_Information_PnPL.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Addons/PnPL/Components/Src/PnPL_init.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Addons/PnPL/Components/Src/Lsm6dsv16x_Acc_PnPL.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Addons/PnPL/Components/Src/Acquisition_Information_PnPL.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Addons/PnPL/Components/Src/Log_Controller_PnPL.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Addons/PnPL/Components/Src/Lsm6dsv16x_Gyro_PnPL.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Addons/PnPL/Components/Src/Lsm6dsv16x_Mlc_PnPL.c    

    ${CMAKE_CURRENT_SOURCE_DIR}/../../Core/Src/main.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Core/Src/gpdma.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Core/Src/gpio.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Core/Src/i2c.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Core/Src/icache.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Core/Src/memorymap.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Core/Src/rtc.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Core/Src/tim.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Core/Src/usb.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Core/Src/usart.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Core/Src/stm32u5xx_it.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Core/Src/stm32u5xx_hal_msp.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Core/Src/flash_memory.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Core/Src/sysmem.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Core/Src/syscalls.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../startup_stm32u585xx.s
)

# STM32 HAL/LL Drivers
set(STM32_Drivers_Src
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Core/Src/system_stm32u5xx.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Drivers/STM32U5xx_HAL_Driver/Src/stm32u5xx_hal_i2c.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Drivers/STM32U5xx_HAL_Driver/Src/stm32u5xx_hal_i2c_ex.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Drivers/STM32U5xx_HAL_Driver/Src/stm32u5xx_hal_dma.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Drivers/STM32U5xx_HAL_Driver/Src/stm32u5xx_hal_dma_ex.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Drivers/STM32U5xx_HAL_Driver/Src/stm32u5xx_hal.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Drivers/STM32U5xx_HAL_Driver/Src/stm32u5xx_hal_rcc.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Drivers/STM32U5xx_HAL_Driver/Src/stm32u5xx_hal_rcc_ex.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Drivers/STM32U5xx_HAL_Driver/Src/stm32u5xx_hal_cortex.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Drivers/STM32U5xx_HAL_Driver/Src/stm32u5xx_hal_flash.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Drivers/STM32U5xx_HAL_Driver/Src/stm32u5xx_hal_flash_ex.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Drivers/STM32U5xx_HAL_Driver/Src/stm32u5xx_hal_gpio.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Drivers/STM32U5xx_HAL_Driver/Src/stm32u5xx_hal_exti.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Drivers/STM32U5xx_HAL_Driver/Src/stm32u5xx_hal_pwr.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Drivers/STM32U5xx_HAL_Driver/Src/stm32u5xx_hal_pwr_ex.c
#    ${CMAKE_CURRENT_SOURCE_DIR}/../../Drivers/STM32U5xx_HAL_Driver/Src/stm32u5xx_hal_gtzc.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Drivers/STM32U5xx_HAL_Driver/Src/stm32u5xx_hal_icache.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Drivers/STM32U5xx_HAL_Driver/Src/stm32u5xx_hal_rtc.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Drivers/STM32U5xx_HAL_Driver/Src/stm32u5xx_hal_rtc_ex.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Drivers/STM32U5xx_HAL_Driver/Src/stm32u5xx_hal_tim.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Drivers/STM32U5xx_HAL_Driver/Src/stm32u5xx_hal_tim_ex.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Drivers/STM32U5xx_HAL_Driver/Src/stm32u5xx_ll_usb.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Drivers/STM32U5xx_HAL_Driver/Src/stm32u5xx_hal_pcd.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Drivers/STM32U5xx_HAL_Driver/Src/stm32u5xx_hal_pcd_ex.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Drivers/STM32U5xx_HAL_Driver/Src/stm32u5xx_hal_uart.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Drivers/STM32U5xx_HAL_Driver/Src/stm32u5xx_hal_uart_ex.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Drivers/BSP/STEVAL-MKBOXPRO/steval_mkboxpro_bus.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Drivers/BSP/Components/lsm6dsv16x/lsm6dsv16x_reg.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Drivers/BSP/Components/lsm6dsv16x/lsm6dsv16x.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Drivers/BSP/Components/ST25DV/st25dv.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Drivers/BSP/Components/ST25DV/st25dv_reg.c
)

# Drivers Midllewares


set(FP-SNS-STAIOTCFT_Src
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Middlewares/Third_Party/Parson_DataOoExchange/parson/parson.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Middlewares/ST/PnPLCompManager/Src/IPnPLComponent.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Middlewares/ST/PnPLCompManager/Src/PnPLCompManager.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Middlewares/ST/aspep_slave/Src/aspep_slave.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Middlewares/ST/aspep_slave/Src/aspep_slave_config.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Middlewares/ST/aspep_slave/Src/usart_aspep_driver_HAL.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Middlewares/ST/SimpleSerialTL/Src/simple_serial_tl.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Middlewares/ST/STM32_USB_Device_Library/Core/Src/usbd_core.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Middlewares/ST/STM32_USB_Device_Library/Core/Src/usbd_ctlreq.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Middlewares/ST/STM32_USB_Device_Library/Core/Src/usbd_ioreq.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Src/usbd_cdc.c
)

# Link directories setup
set(MX_LINK_DIRS

)
# Project static libraries
set(MX_LINK_LIBS 
    STM32_Drivers
    ${TOOLCHAIN_LINK_LIBRARIES}
    FP-SNS-STAIOTCFT
	
)
# Interface library for includes and symbols
add_library(stm32cubemx INTERFACE)
target_include_directories(stm32cubemx INTERFACE ${MX_Include_Dirs})
target_compile_definitions(stm32cubemx INTERFACE ${MX_Defines_Syms})

# Create STM32_Drivers static library
add_library(STM32_Drivers OBJECT)
target_sources(STM32_Drivers PRIVATE ${STM32_Drivers_Src})
target_link_libraries(STM32_Drivers PUBLIC stm32cubemx)


# Create FP-SNS-STAIOTCFT static library
add_library(FP-SNS-STAIOTCFT OBJECT)
target_sources(FP-SNS-STAIOTCFT PRIVATE ${FP-SNS-STAIOTCFT_Src})
target_link_libraries(FP-SNS-STAIOTCFT PUBLIC stm32cubemx)

# Add STM32CubeMX generated application sources to the project
target_sources(${CMAKE_PROJECT_NAME} PRIVATE ${MX_Application_Src})

# Link directories setup
target_link_directories(${CMAKE_PROJECT_NAME} PRIVATE ${MX_LINK_DIRS})

# Add libraries to the project
target_link_libraries(${CMAKE_PROJECT_NAME} ${MX_LINK_LIBS})

# Add the map file to the list of files to be removed with 'clean' target
set_target_properties(${CMAKE_PROJECT_NAME} PROPERTIES ADDITIONAL_CLEAN_FILES ${CMAKE_PROJECT_NAME}.map)

# Validate that STM32CubeMX code is compatible with C standard
if((CMAKE_C_STANDARD EQUAL 90) OR (CMAKE_C_STANDARD EQUAL 99))
    message(ERROR "Generated code requires C11 or higher")
endif()
